# Smartvest

./: .env  .env.example  .gitignore  README.md  package.json
copilot/: README.md  main.py  models.py  prompts.py  pyproject.toml  test.py
src/components/Logo/: index.js
src/components/cards/statistics/: CryptoPrice.js
src/layout/MainLayout/Drawer/DrawerHeader/: index.js
src/layout/MainLayout/Header/HeaderContent/: index.js
src/layout/MainLayout/Header/HeaderContent/Profile/: index.js
src/menu-items/: dashboard.js
src/pages/dashboard/: AppNewsUpdate.js  OrdersTable.js  PriceChart.js  index.js
src/pages/dashboard/styles/: override-bot.css
src/utils/: chatbot.js  cryptodata.js
